@@ -1,3 +1,8 @@
+2018-02-09  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	PR target/PR84295
+	* gcc.target/s390/pr84295.c: New test.
+
 2018-02-09  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/77522
